# Chatty

./: CMakeLists.txt  README.md  build.bat  build.sh
resources/: resources.qrc
resources/styles/: modern.qss
src/: Application.h  ChatInterface.h  ChatWidget.cpp  ChatWidget.h  FileManager.cpp  FileManager.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MarkdownRenderer.cpp  MarkdownRenderer.h  Message.h  MessageWidget.cpp  MessageWidget.h  OpenRouterAPI.cpp  OpenRouterAPI.h  Settings.cpp  Settings.h  SettingsDialog.h  SettingsDialog.ui  WelcomeWidget.cpp  WelcomeWidget.h  main.cpp
